# dspy-system-prompt

./: .env.sample  .gitignore  API_FIXES.md  API_SERVER_PROPOSAL.md  ARCHITECTURE.md  CLAUDE.md  CLEAN_ARCHITECTURE_REVIEW.md  CONVERSATION_PLAN.md  CYPRESS.md  CYPRESS_SIMPLIFIED.md  CYPRESS_TESTING.md  DEMOS.md  DEMO_FIXED.md  DSPY_CLEANUP_PROJECT_PLAN.md  DSPY_NOTES.md  DSPY_TOOLS.md  DYNAMIC_DISCOVERY.md  ECOM_GUIDE.md  ELASTIC_SEARCH_RAG_TOOL.md  FINAL_PROPOSAL_CLIENT_MCP.md  FIX_DSPY.md  FIX_USER_SESSION.md  FRONTEND_REAL_ESTATE_UPDATE.md  FRONT_END_SIMPLE.md  FULL_SYNC.md  GUIDE_TO_PROMPTING.md  IMPLEMENTATION_STATUS.md  LOOP.md  MCP_DEMO_IN_DEPTH.md  MCP_DEMO_READY.md  MCP_DEMO_SCRIPT.md  MCP_IMPLEMENTATION_SUMMARY.md  MCP_INTEGRATION_KEY_INSIGHTS.md  MISSING.md  MULTI_LLMS.md  RAG_TOOL.md  README.md  RESTORE_LOGGING.md  REVIEW.md  SIMPLE_TOOL.md  (+34 more)
agentic_loop/: __init__.py  core_loop.py  demo_react_agent.py  extract_agent.py  models.py  react_agent.py  run_query.py  session.py
api/: QUICKSTART.md  README.md  __init__.py  main.py  run_integration_tests.sh  run_tests.sh
config/: llm.json
docs/: dspy_docs.md  flow.md  trajectory_compression.md
frontend/: .gitignore  FRONTEND_GUIDE.md  cypress.config.js  index.html  package-lock.json  package.json  vite.config.js
html_samples/: mockup_about.html  mockup_admin.html  mockup_advanced.html  mockup_chatbot.html  mockup_dashboard.html  mockup_demos.html  scheme_10_carbon_steel.html  scheme_1_ocean_depth.html  scheme_2_forest_moss.html  scheme_3_sunset_glow.html  scheme_4_purple_dusk.html  scheme_5_midnight_blue.html  (+4 more)
(+207 files in other folders)
